--- a/gb/14/5/12/n4153699.md
+++ b/gb/14/5/12/n4153699.md
@@ -1,14 +1,14 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ezkcme3586/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ezkcme3586/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ezkcme3586/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ezkcme3586/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ezkcme3586/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>明真相世人恭贺大法洪传二十二周年暨李洪志大师华诞(22条)</h2>
 
 <h6></h6>
 <hr>
 	<p>【大纪元2014年05月12日讯】<br /><B></p>
-<hr size=1>四川省达州市开江县明真相得福报的世人同庆同贺<ahref="https://github.com/ezkcme3586/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>暨法轮大法洪传二十二周年！恭祝李<ahref="https://github.com/ezkcme3586/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>生日快乐！</B></p>
+<hr size=1>四川省达州市开江县明真相得福报的世人同庆同贺<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>暨法轮大法洪传二十二周年！恭祝李<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>生日快乐！</B></p>
 <p><ahref=http://www.minghui.org/mh/article_images/2014-5-9-405071040213_01.jpg><img src=http://www.minghui.org/mh/article_images/2014-5-9-405071040213_01--ss.jpg></a></p>
-<p>感谢大法佛光普照！感恩李<ahref="https://github.com/ezkcme3586/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>的恩泽！<br /><B></p>
+<p>感谢大法佛光普照！感恩李<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%A4%A7%E5%B8%88.md#1">大师</a>的恩泽！<br /><B></p>
 <hr size=1>河北廊坊燕郊一个大法弟子明真相的亲属祝贺师父的生日快乐！</B></p>
 <p><ahref=http://www.minghui.org/mh/article_images/2014-5-9-405070851648_01.jpg><img src=http://www.minghui.org/mh/article_images/2014-5-9-405070851648_01--ss.jpg></a></p>
 <p>（注：十字绣作品是河北廊坊燕郊一个大法弟子明真相的亲属为了表达对师父和大法的感恩，花了20多天的时间绣成的。是给师父祝贺生日的！）<br /><B></p>
@@ -21,7 +21,7 @@
 <hr size=1>四川省成都明真相大法弟子亲属恭祝李大师生日快乐！</B></p>
 <p><ahref=http://www.minghui.org/mh/article_images/2014-5-9-405050949403_01.jpg><img src=http://www.minghui.org/mh/article_images/2014-5-9-405050949403_01--ss.jpg></a></p>
 <p>二零一四年五月<br /><B></p>
-<hr size=1>会宁全体大法弟子恭贺<ahref="https://github.com/ezkcme3586/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！</B><br />在世界法轮大法日来临之际，我们会宁全体大法弟子及明白真相的家人向慈悲伟大的师尊问好！我们一定走好您安排的路。<br />会宁全体大法弟子恭贺<br /><B></p>
+<hr size=1>会宁全体大法弟子恭贺<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E6%B3%95%E8%BD%AE%E5%A4%A7%E6%B3%95%E6%97%A5.md#1">世界法轮大法日</a>！</B><br />在世界法轮大法日来临之际，我们会宁全体大法弟子及明白真相的家人向慈悲伟大的师尊问好！我们一定走好您安排的路。<br />会宁全体大法弟子恭贺<br /><B></p>
 <hr size=1>大陆民众全家向李大师谢恩！</B></p>
 <p><ahref=http://www.minghui.org/mh/article_images/2014-5-9-405060953499_01.jpg><img src=http://www.minghui.org/mh/article_images/2014-5-9-405060953499_01--ss.jpg></a></p>
 <p><B></p>
@@ -31,8 +31,8 @@
 <p><ahref=http://www.minghui.org/mh/article_images/2014-5-4-405010952842_01.jpg><img src=http://www.minghui.org/mh/article_images/2014-5-4-405010952842_01--ss.jpg></a></p>
 <p>我们大法弟子的全家人，都已明白真相退出中共邪党组织，诚信“法轮大法好、真善忍好”，并深感身心受益、祥和幸福，无比敬仰大法师父，感谢伟大师父的慈悲救度！期盼大法师父早日回大陆团聚！<br />哈尔滨大法弟子和明真相的全家人 敬拜<br /><B></p>
 <hr size=1>河北省邯郸市峰峰矿区一母女及家人叩谢李大师救命之恩，并恭祝李大师生日快乐！</B><br /><B></p>
-<hr size=1>广东省河源市龙川县明白真相的老百姓恭祝李大师生日快乐！</B><br />李大师您好！我曾经因为被中共恶党的谎言毒害，善恶不清黑白混，仇视大法诽谤大法，大法弟子跟我讲真相也听不进去，请您原谅。有一次我食物中毒，肚子疼的象抽筋一样腰都直不起来，呼吸困难，躺在地上起不来，想喊救命也喊不出声，想打电话手也没力气，危难之时我才想起大法弟子的忠告，心里默念“法轮大法好”，瞬间就缓解了很多，然后我就念出声来，越念越舒服，大概十分钟我就爬起来去厕所，解便后浑身轻松。我以前是无神论者，现在我相信李大师是神，法轮大法最好，共产党最坏。谢谢李大师的救命之恩，普天同庆李大师生日快乐，希望大师早日回国，早日平反<ahref="https://github.com/ezkcme3586/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，还李大师清白。谢谢！<br /><B></p>
-<hr size=1>四川省达州市开江县某乡镇大法新学员真诚感谢李老师的救命之恩！真诚祝愿李老师生日快乐！</B><br />我是四川省开江县某乡镇的农妇，现年58岁，不识字。近几年来，胃病、胆结石等多种疾病缠身，服药后全身虚肿。2013年经县、市医院检查确诊为“肺肿瘤”，又到成都华西医院检查，确诊为“肺癌晚期”。我丈夫因胆结石住院未愈，儿女在外打工，孙子、孙女读书，离学校较远，每天还需要大人接送，家庭困难，只好卖谷子换钱治病，在外打工的女儿迫不得已回家照顾全家老小。从华西医院检查回来，正筹钱准备住院治疗，有两位<ahref="https://github.com/ezkcme3586/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员到我们村亲戚家吃酒，听说我的情况后，到我家来给我讲大法真相，还送我法轮功“护身符”，告诉我诚心诚意念“法轮大法好、真善忍好”，会有福报。我就悄悄的天天念这九个字，生怕别人知道了告发我。不到一个月病情果然明显减轻，咳嗽稀疏了，也不带血了，饭量（食量）也增加了。后来那法轮功学员又借给我MP3播放器，我也开始大胆学炼法轮功，天天听李老师讲法录音。现在身体已经恢复正常。附近了解我病情的人，都说是奇迹，我也敢于告诉邻居们，我是被医院判了死刑的人，是法轮功救了我的命，你们也要记住“法轮大法好，真善忍好”，谁诚心诚意念，谁就会和我一样得福报。在“5.13”世界法轮大法日到来的之际，我真诚感谢李老师的救命之恩，真诚祝愿李老师生日快乐！真诚祝贺世界法轮大法日！<br /><B></p>
+<hr size=1>广东省河源市龙川县明白真相的老百姓恭祝李大师生日快乐！</B><br />李大师您好！我曾经因为被中共恶党的谎言毒害，善恶不清黑白混，仇视大法诽谤大法，大法弟子跟我讲真相也听不进去，请您原谅。有一次我食物中毒，肚子疼的象抽筋一样腰都直不起来，呼吸困难，躺在地上起不来，想喊救命也喊不出声，想打电话手也没力气，危难之时我才想起大法弟子的忠告，心里默念“法轮大法好”，瞬间就缓解了很多，然后我就念出声来，越念越舒服，大概十分钟我就爬起来去厕所，解便后浑身轻松。我以前是无神论者，现在我相信李大师是神，法轮大法最好，共产党最坏。谢谢李大师的救命之恩，普天同庆李大师生日快乐，希望大师早日回国，早日平反<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>，还李大师清白。谢谢！<br /><B></p>
+<hr size=1>四川省达州市开江县某乡镇大法新学员真诚感谢李老师的救命之恩！真诚祝愿李老师生日快乐！</B><br />我是四川省开江县某乡镇的农妇，现年58岁，不识字。近几年来，胃病、胆结石等多种疾病缠身，服药后全身虚肿。2013年经县、市医院检查确诊为“肺肿瘤”，又到成都华西医院检查，确诊为“肺癌晚期”。我丈夫因胆结石住院未愈，儿女在外打工，孙子、孙女读书，离学校较远，每天还需要大人接送，家庭困难，只好卖谷子换钱治病，在外打工的女儿迫不得已回家照顾全家老小。从华西医院检查回来，正筹钱准备住院治疗，有两位<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员到我们村亲戚家吃酒，听说我的情况后，到我家来给我讲大法真相，还送我法轮功“护身符”，告诉我诚心诚意念“法轮大法好、真善忍好”，会有福报。我就悄悄的天天念这九个字，生怕别人知道了告发我。不到一个月病情果然明显减轻，咳嗽稀疏了，也不带血了，饭量（食量）也增加了。后来那法轮功学员又借给我MP3播放器，我也开始大胆学炼法轮功，天天听李老师讲法录音。现在身体已经恢复正常。附近了解我病情的人，都说是奇迹，我也敢于告诉邻居们，我是被医院判了死刑的人，是法轮功救了我的命，你们也要记住“法轮大法好，真善忍好”，谁诚心诚意念，谁就会和我一样得福报。在“5.13”世界法轮大法日到来的之际，我真诚感谢李老师的救命之恩，真诚祝愿李老师生日快乐！真诚祝贺世界法轮大法日！<br /><B></p>
 <hr size=1>四川省达州市大竹县明真相世人祝李大师生日快乐！恭贺法轮大法洪传二十二周年！</B><br />李大师，您的弟子给我们愚迷的世人讲真相，让我们明白了法轮大法好，中共邪党邪恶，邪党用残酷的手段迫害佛法和修炼人。我们支持大法和大法弟子，我们得到了身体健康、家庭和睦、福报连连，谢谢李大师，盼您早日回国。合十！<br /><B></p>
 <hr size=1>吉林省长春—市民恭祝伟大的法轮大法李老师生日快乐！</B><br /><B></p>
 <hr size=1>山东卫生系统大法弟子恭祝师尊生日快乐！恭贺世界法轮大法日！</B><br />五月，感恩的季节，感恩佛法、感谢师尊。您造就了敢于走真理之路的亿万圣徒，让人心向善，道德回升，带给这个世界的是慈悲和威严，正义和美好。弟子有幸得此高德大法，明白了人生的真谛，不再为琐事烦恼，不再被疾病缠身，生命如此美好，只有修炼人才能体会。中共邪恶的谎言依然毒害着不明真相的世人，把法轮功的真相告诉世人是弟子神圣的责任。法轮大法是正法，世界需要真、善、忍。<br /><B></p>
@@ -47,41 +47,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/14/5/11/n4152925.md#1">大陆军队法轮功学员恭贺李洪志大师华诞暨大法洪传二十二周年(19条)</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/14/5/11/n4152926.md#1">明真相世人恭贺李洪志大师华诞暨大法洪传二十二周年(23条)</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/14/5/11/n4152927.md#1">新学员恭贺李洪志大师华诞暨大法洪传二十二周年(22条)</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/14/5/11/n4152928.md#1">各行业法轮功学员恭贺李洪志大师华诞暨大法洪传二十二周年(34条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/5/11/n4152925.md#1">大陆军队法轮功学员恭贺李洪志大师华诞暨大法洪传二十二周年(19条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/5/11/n4152926.md#1">明真相世人恭贺李洪志大师华诞暨大法洪传二十二周年(23条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/5/11/n4152927.md#1">新学员恭贺李洪志大师华诞暨大法洪传二十二周年(22条)</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/5/11/n4152928.md#1">各行业法轮功学员恭贺李洪志大师华诞暨大法洪传二十二周年(34条)</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/8/n11241913.md#1" target="_blank">【征文】袁斌：中共怎样用党文化取代传统文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/2/n10015824.md#1" target="_blank">文武：中共篡政（三）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/17/n11119803.md#1" target="_blank">见证奇迹 一位越南女子修炼法轮功的故事</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/3/n12920672.md#1">目击30公分高外星人走出UFO 玻国居民惊呆</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12923553.md#1">《推背图》预言大戏尾声的丰碑事件</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12924345.md#1">【未解之谜】五台山之谜：清凉胜地的秘密</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/4/19/n12890234.md#1">日食及沙罗周期天象预言：中共生与灭</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12923727.md#1">儿子发狂与富家子败家皆有前因 结恶缘必尝恶果</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12930001.md#1">【首播】新世纪力作《抉择》5月7日网络首映</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932085.md#1">【新闻看点】中共敢攻台？美一大招北京真会慌</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932139.md#1">专访李南央：我的两本书《母亲》和《继母》（3）</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932085.md#1">【新闻看点】中共敢攻台？美一大招北京真会慌</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931918.md#1">梁朝伟拒演一部电影 成就周星驰的星爷地位</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933638.md#1">【新闻看点】习加紧造神 高官知中共内情急退党</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931918.md#1">梁朝伟拒演一部电影 成就周星驰的星爷地位</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12932241.md#1">李千那父亲演出到一半晕倒 送医动5小时手术</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/6/n12929398.md#1">吃早餐巧遇周润发 港星徐荣直呼：终于轮到我</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12931731.md#1">打完疫苗24小时后发烧 赖铭伟停工返家休养</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933136.md#1">好莱坞巨星家乡开派对 粉丝羡慕澳洲防疫有成</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/6/n12927468.md#1">飞蚊症能治愈？2碗药膳 告别眼睛老化和飞蚊</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/7/n12929901.md#1">印度疫情何时到顶峰？七大问题一次看懂</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/4/n12923540.md#1">肾功能下降一半 可能没感觉！这些症状别轻忽</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12932504.md#1">美双胞胎姊妺申请大学 获2400万美元奖学金</a></li>
-<li><a href="https://github.com/ezkcme3586/djy/blob/master/gb/21/5/8/n12933008.md#1">【重播】WHO为何颁发中国疫苗紧急授权？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11957882.md#1">李文亮一女同事病逝 其夫涉嫌活摘器官</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ezkcme3586/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ezkcme3586/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/5/12/n4153699.htm">明真相世人恭贺大法洪传二十二周年暨李洪志大师华诞(22条)</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/14/5/12/n4153699.htm">明真相世人恭贺大法洪传二十二周年暨李洪志大师华诞(22条)</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ezkcme3586/djy/blob/master/gb/14/5/12/n4153699.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ezkcme3586/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ezkcme3586/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ezkcme3586/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ezkcme3586/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ezkcme3586/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/14/5/12/n4153699.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
